foundation of main islands and navbar, plus added starfield custom component

--- a/src/components/Starfield.astro
+++ b/src/components/Starfield.astro
@@ -1,6 +1,6 @@
 <div
 	id="starfield"
-	class="absolute inset-0"
+	class="inset-0 w-full h-full"
 >
 	<canvas id="starfield-canvas"></canvas>
 </div>
