--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from "@/components/Navigation.astro"
+// import Navigation from "@/components/Navigation"
 ---
 
 <html lang="en">
@@ -10,7 +10,7 @@ import Navigation from "@/components/Navigation.astro"
         <title>Document</title>
     </head>
     <body>
-        <Navigation/>
+        <!-- <Navigation client:load/> -->
         <slot />
     </body>
 </html>
