added navbar, types, refactor folders tree, prestylen

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
 import "@/styles/globals.css";
-import Starfield from "@/components/Starfield.astro";
+import Starfield from "@/components/misc/Starfield.astro";
 import BaseLayout from "@/layouts/BaseLayout.astro";
-import Collection from "@/components/Collection.astro";
+import Collection from "@/components/section/Collection.astro";
+import Navbar from "@/components/layout/navbar";
 ---
 
 <BaseLayout>
+    <Navbar client:load/>
 	<div class="bg-blue-400 relative h-[calc(100vh-100px)] flex justify-center">
 		<div class="container absolute w-full h-full m-auto">
 			<div class="w-full h-full flex justify-center items-center">
