--- a/src/components/section/Collection.astro
+++ b/src/components/section/Collection.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/globals.css";
+import "@/styles/globals.css";
 import { Button } from "@/components/ui/button";
 
 interface Props {
