cleaned project with broken Navbar

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,4 @@
 ---
-// import Navigation from "@/components/Navigation"
 ---
 
 <html lang="en">
@@ -7,10 +6,9 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
-        <title>Document</title>
+        <title>Photo Portfolio</title>
     </head>
     <body>
-        <!-- <Navigation client:load/> -->
         <slot />
     </body>
 </html>
