--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,21 @@
 ---
 import "@/styles/globals.css";
-import BaseLayout from "@/layouts/BaseLayout.astro";
+import MainLayout from "@/layouts/main-layout.astro";
 ---
 
-<BaseLayout>
-	<div class="w-full h-full">
+<MainLayout>
+	<div class="w-full h-screen">
 		<div class="container">
 			<div class="w-full h-screen flex justify-center items-center">
 				<h1>Start</h1>
 			</div>
 		</div>
 	</div>
-</BaseLayout>
+    <div class="bg-green-200 w-full h-screen">
+		<div class="container">
+			<div class="w-full h-screen flex justify-center items-center">
+				<h1>Start</h1>
+			</div>
+		</div>
+	</div>
+</MainLayout>
