complete mobile nav

--- a/src/layouts/main-layout.astro
+++ b/src/layouts/main-layout.astro
@@ -14,6 +14,7 @@ import Navbar from "@/components/navbar";
 			name="generator"
 			content={Astro.generator}
 		/>
+		<link rel="icon" href="favicon.svg">
 		<title>Photo Portfolio</title>
 	</head>
 	<body>
