--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,14 +7,12 @@ import MainLayout from "@/layouts/main-layout.astro";
 	<div class="w-full h-screen">
 		<div class="container">
 			<div class="w-full h-screen flex justify-center items-center">
-				<h1>Start</h1>
+				<h1 class="text-white">Start</h1>
 			</div>
 		</div>
-	</div>
-    <div class="bg-green-200 w-full h-screen">
 		<div class="container">
-			<div class="w-full h-screen flex justify-center items-center">
-				<h1>Start</h1>
+			<div class="w-full h-screen flex justify-center items-center bg-slate-300">
+				<h1 class="text-white">Start</h1>
 			</div>
 		</div>
 	</div>
