--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,13 @@ import MainLayout from "@/layouts/main-layout.astro";
 
 <MainLayout>
 	<div class="w-full h-screen">
-		<div class="container">
-			<div class="w-full h-screen flex justify-center items-center">
+		<div class="w-full h-screen flex justify-center items-center bg-zinc-950">
+			<div class="container">
 				<h1 class="text-white">Start</h1>
 			</div>
 		</div>
-		<div class="container">
-			<div class="w-full h-screen flex justify-center items-center bg-slate-300">
+		<div class="w-full h-screen flex justify-center items-center bg-blue-600">
+			<div class="container">
 				<h1 class="text-white">Start</h1>
 			</div>
 		</div>
