--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,24 @@
 ---
-import "@/styles/globals.css";
-import MainLayout from "@/layouts/main-layout.astro";
+import '@/styles/globals.css';
+import MainLayout from '@/layouts/main-layout.astro';
 ---
 
 <MainLayout>
-	<div class="w-full h-screen">
-		<div class="w-full h-screen flex justify-center items-center bg-zinc-950">
-			<div class="container">
-				<h1 class="text-white">Start</h1>
-			</div>
-		</div>
-		<div class="w-full h-screen flex justify-center items-center bg-blue-600">
-			<div class="container">
-				<h1 class="text-white">Start</h1>
-			</div>
-		</div>
-	</div>
+    <div class='w-full h-screen'>
+        <div class='w-full h-screen flex justify-center items-center'>
+            <div class='container'>
+                <h1 class='text-black'>Start</h1>
+            </div>
+        </div>
+        <div class='w-full h-screen flex justify-center items-center bg-zinc-950'>
+            <div class='container'>
+                <h1 class='text-white'>Start</h1>
+            </div>
+        </div>
+        <div class='w-full h-screen flex justify-center items-center bg-blue-600'>
+            <div class='container'>
+                <h1 class='text-white'>Start</h1>
+            </div>
+        </div>
+    </div>
 </MainLayout>
