--- a/src/layouts/main-layout.astro
+++ b/src/layouts/main-layout.astro
@@ -2,6 +2,7 @@
 import '@/styles/globals.css';
 import '@radix-ui/themes/styles.css';
 import MainNavbar from '@/components/navigation/main-navbar';
+import { Theme } from '@radix-ui/themes';
 ---
 
 <html lang='en'>
